# ChangeLog for www-servers/jboss
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Dec 2006; Miroslav Šulc <miroslav.sulc@startnet.cz>
  -files/digest-jboss-4.0.4-r2, +ChangeLog, Manifest:
  removed zombie file
