@@ -36,6 +36,7 @@ RMD160 3d23ad11909fa8ea846f440a75a7586304d8a03b files/4.0.5/log4j.xml 5825
 SHA256 967e1e6abde37ca24d8602da9a43d6be5760f6e07cb377f11cb33b6569e4baf8 files/4.0.5/log4j.xml 5825
 DIST jboss-4.0.4.GA.zip 77400244 RMD160 6f8a26edf165cefd1c3d84311ca3be5fb09a6a75 SHA1 27698ca69c8c3b30470cb5397ba4728808481197 SHA256 e9939837d98c30b283f5ef655f611b4f00a2a2a607e1f7ce823479fe94403d72
 DIST jboss-4.0.5.GA.zip 80866589 RMD160 9349152c4749f696edc49e14665301667aba4cfb SHA1 496a49547e3525c7f32b169126cdff13c2d8a04a SHA256 b81b7bba2657c4e1cb7cf7e3958eaffbe48ee0c5ebbe5782909745277a3b923f
+DIST jboss-EJB-3.0_RC9_Patch_1.zip 10656132 RMD160 7301a79f2f3a274b5c759883b27eed7ea96b06cd SHA1 0279f988eed86f7fc3d1145acfd4fb6496cd16dd SHA256 9b1634e10deaf962c22f73c96df6fe613a6a9dd4bb179f64d62ae93917ccfcf3
 EBUILD jboss-4.0.4-r1.ebuild 3533 RMD160 1a04aadbad6bc765c6db4a8ac4546153fa9c6de7 SHA1 a7b5f4a4da26aacbddf6151ce7c25ef5a3328a26 SHA256 1e4cadccfce5851359516c649598a490ba1ad2e412c07d6934ca53905917dc65
 MD5 4ba9ba5a224f2a7f53ff26174e7b6b9b jboss-4.0.4-r1.ebuild 3533
 RMD160 1a04aadbad6bc765c6db4a8ac4546153fa9c6de7 jboss-4.0.4-r1.ebuild 3533
@@ -44,14 +45,18 @@ EBUILD jboss-4.0.4.ebuild 2349 RMD160 7ed4e53b67d5b4048deebead3d10b7332829214a S
 MD5 30e6c4181c3f1088a46a654c862f3de6 jboss-4.0.4.ebuild 2349
 RMD160 7ed4e53b67d5b4048deebead3d10b7332829214a jboss-4.0.4.ebuild 2349
 SHA256 4faf3115dcb6124ee5e0c2e86b03c585819eb31e3fba35f41e3f04e7e5bc4bea jboss-4.0.4.ebuild 2349
+EBUILD jboss-4.0.5-r1.ebuild 9364 RMD160 84abf5295ae27240c33522fe65447a5299c1a488 SHA1 24fe7c45fdea756b6d60c4ba3d3a1ee44efd2057 SHA256 23d757e62e5afb83e3d387ed9adf0478820df66e5d76395be2a02ac3926855f4
+MD5 4eb703cd2492c2f36aeca6a168bf6e98 jboss-4.0.5-r1.ebuild 9364
+RMD160 84abf5295ae27240c33522fe65447a5299c1a488 jboss-4.0.5-r1.ebuild 9364
+SHA256 23d757e62e5afb83e3d387ed9adf0478820df66e5d76395be2a02ac3926855f4 jboss-4.0.5-r1.ebuild 9364
 EBUILD jboss-4.0.5.ebuild 4670 RMD160 f23c3cea782724851f9a2dc80da627bf47b40c43 SHA1 2e968042ea2daa740702738e4e368c82a7fbc5d1 SHA256 995451e917e801646ff23c5cf91531f90a13ba6d6ff27e746546a09ad46e0608
 MD5 dc7e85200319aa2a0bd1b2dcaf000670 jboss-4.0.5.ebuild 4670
 RMD160 f23c3cea782724851f9a2dc80da627bf47b40c43 jboss-4.0.5.ebuild 4670
 SHA256 995451e917e801646ff23c5cf91531f90a13ba6d6ff27e746546a09ad46e0608 jboss-4.0.5.ebuild 4670
-MISC ChangeLog 253 RMD160 d73a86501dadb1d6a86a989cbd316eb2454c400a SHA1 ba2bbc07f7a888f890ad3206834e1043c5a138df SHA256 0a8720cdf2921239913d48b0a53947ccd808ef84aedaba9fa6336d264b92a8d4
-MD5 260fdae66706e3988161cd7cc7186a31 ChangeLog 253
-RMD160 d73a86501dadb1d6a86a989cbd316eb2454c400a ChangeLog 253
-SHA256 0a8720cdf2921239913d48b0a53947ccd808ef84aedaba9fa6336d264b92a8d4 ChangeLog 253
+MISC ChangeLog 392 RMD160 42ad1773e72bc7e15aaf5fb0dc37d52141600762 SHA1 4e8f25be9d8244c2585db2e7febabbbc209693c4 SHA256 15f5d262afec3e3eeff34bf753347b86187f4ef6e8c43c27f87242d60269e760
+MD5 f20560d5c6d1b33b8002aabf002cc680 ChangeLog 392
+RMD160 42ad1773e72bc7e15aaf5fb0dc37d52141600762 ChangeLog 392
+SHA256 15f5d262afec3e3eeff34bf753347b86187f4ef6e8c43c27f87242d60269e760 ChangeLog 392
 MISC metadata.xml 205 RMD160 934c811ce2118963118b8ad86da1ec2814dd285f SHA1 f75079bfb666a750926732a1606474fee17093df SHA256 e319f1701f6be29c8e077049d77738b69b72be0458754ef90ad9a684f2ec1722
 MD5 32f292422340d94607190db006fb058f metadata.xml 205
 RMD160 934c811ce2118963118b8ad86da1ec2814dd285f metadata.xml 205
@@ -65,3 +70,6 @@ SHA256 b15f13fcafb78a2496d4327caad3ab51f2af73500aa71fab81cfe450b34d8f29 files/di
 MD5 63a7c38a2f5a25e8c4817082f85d8376 files/digest-jboss-4.0.5 241
 RMD160 a30e2d5401afd6312a644f4d4febbceb8db48655 files/digest-jboss-4.0.5 241
 SHA256 1384300b7f3ab693bfa99fce1ccbcc027267ec333db963e4a61c534cdbdc5fce files/digest-jboss-4.0.5 241
+MD5 cdc14fd9932032d16f1362572cc9ae9c files/digest-jboss-4.0.5-r1 515
+RMD160 96a8c1a0033834b00dc655929343926cdee92fd4 files/digest-jboss-4.0.5-r1 515
+SHA256 517426058849e94d22820bb1bcd799894ccb7ba66ce9cd5a4b0950b322d815ad files/digest-jboss-4.0.5-r1 515
