@@ -1,0 +1,6 @@
+MD5 a39e85981958fea2411e9346e218aa39 jboss-4.0.5.GA.zip 80866589
+RMD160 9349152c4749f696edc49e14665301667aba4cfb jboss-4.0.5.GA.zip 80866589
+SHA256 b81b7bba2657c4e1cb7cf7e3958eaffbe48ee0c5ebbe5782909745277a3b923f jboss-4.0.5.GA.zip 80866589
+MD5 282fc56833c58a7273395dbb72678d3a jboss-EJB-3.0_RC9_Patch_1.zip 10656132
+RMD160 7301a79f2f3a274b5c759883b27eed7ea96b06cd jboss-EJB-3.0_RC9_Patch_1.zip 10656132
+SHA256 9b1634e10deaf962c22f73c96df6fe613a6a9dd4bb179f64d62ae93917ccfcf3 jboss-EJB-3.0_RC9_Patch_1.zip 10656132
